--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           root-reserve-mb: 512
           swap-size-mb: 1024
+          overprovision-lvm: 'true'
 
       - uses: actions/checkout@v3
 
