--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -26,6 +26,8 @@ jobs:
           # remove-haskell: 'true'
           # remove-codeql: 'true'
           # remove-docker-images: 'true'
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
 
       - uses: actions/checkout@v3
 
