--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -17,15 +17,15 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      # - name: Maximize build space
-        # uses: easimon/maximize-build-space@master
-        # with:
-          # root-reserve-mb: 512
-          # swap-size-mb: 1024
-          # overprovision-lvm: 'true'
-          # remove-haskell: 'true'
-          # remove-codeql: 'true'
-          # remove-docker-images: 'true'
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 1024
+          overprovision-lvm: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
 
       - uses: actions/checkout@v3
 
