--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -40,15 +40,15 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@master
-        with:
-          root-reserve-mb: 512
-          swap-size-mb: 1024
-          overprovision-lvm: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-          remove-docker-images: 'true'
+      #- name: Maximize build space
+      #  uses: easimon/maximize-build-space@master
+      #  with:
+      #    root-reserve-mb: 512
+      #    swap-size-mb: 1024
+      #    overprovision-lvm: 'true'
+      #    remove-haskell: 'true'
+      #    remove-codeql: 'true'
+      #    remove-docker-images: 'true'
 
       # Run Tests Build
       - name: Run gradle tests
