--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -1,9 +1,5 @@
 name: APK Build
 
-env:
-  # The name of the main module repository
-  main_project_module: AndroidAPS
-
 on:
   push:
   workflow_dispatch:
@@ -12,7 +8,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    #runs-on: self-hosted
+    # runs-on: self-hosted
 
     steps:
       - name: Maximize build space
@@ -27,14 +23,6 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      # Set Current Date As Env Variable
-      - name: Set current date as env variable
-        run: echo "date_today=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-
-      # Set Repository Name As Env Variable
-      - name: Set repository name as env variable
-        run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
-
       - name: Set Up JDK
         uses: actions/setup-java@v3
         with:
@@ -45,26 +33,44 @@ jobs:
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
 
-      #- name: Setup Android SDK
+      # - name: Setup Android SDK
       #  uses: android-actions/setup-android@v3
+
+      - name: Build
+        run: |
+          echo "Free space:"
+          df -h
 
       # Run Tests Build
       - name: Run gradle tests
         run: ./gradlew test
 
+      - name: Build
+        run: |
+          echo "Free space:"
+          df -h
+
       # Run Build Project
       - name: Build gradle project
         run: ./gradlew build
 
+      - name: Build
+        run: |
+          echo "Free space:"
+          df -h
 
       # Create APK Release
-      - name: Build apk release project (APK) - ${{ env.main_project_module }} module
+      - name: Build apk release project (APK)
         run: ./gradlew assemble
 
+      - name: Build
+        run: |
+          echo "Free space:"
+          df -h
+
       # Upload Artifact Build
-      # Noted For Output [main_project_module]/build/outputs/apk/release/
-      - name: Upload APK Release - ${{ env.repository_name }}
-        uses: actions/upload-artifact@v3
+      - name: Upload APK Release
+        uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.date_today }} - ${{ env.repository_name }} - APK(s) release generated
-          path: ${{ env.main_project_module }}/build/outputs/apk/release/
+          name: app-full-release
+          path: /build/outputs/apk/release/
