--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -21,7 +21,8 @@ jobs:
           remove-codeql: 'true'
           remove-docker-images: 'true'
 
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set Up JDK
         uses: actions/setup-java@v3
@@ -36,7 +37,7 @@ jobs:
       # - name: Setup Android SDK
       #  uses: android-actions/setup-android@v3
 
-      - name: Build
+      - name: Check free space
         run: |
           echo "Free space:"
           df -h
@@ -45,7 +46,7 @@ jobs:
       - name: Run gradle tests
         run: ./gradlew test
 
-      - name: Build
+      - name: Check free space
         run: |
           echo "Free space:"
           df -h
@@ -54,7 +55,7 @@ jobs:
       - name: Build gradle project
         run: ./gradlew build
 
-      - name: Build
+      - name: Check free space
         run: |
           echo "Free space:"
           df -h
@@ -63,7 +64,7 @@ jobs:
       - name: Build apk release project (APK)
         run: ./gradlew assemble
 
-      - name: Build
+      - name: Check free space
         run: |
           echo "Free space:"
           df -h
